<resources>
    <string name="app_name">Altar</string>
    <string name="toolbar_menu_stars">Stars</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_notifications">Notifications</string>
    <string name="nav_item_star">Star</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_faq">FAQ</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_star</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_faq</item>
    </string-array>
    <string name="title_friends">Friends</string>
    <string name="title_altar">Altar</string>
    <string name="title_obituary">Obituary</string>
    <string-array name="faq_sample_questions_array">
        <item>what is this app?</item>
        <item>what is this app?</item>
        <item>what is this app?</item>
        <item>what is this app?</item>
        <item>what is this app?</item>
    </string-array>
    <string name="faq_sample_answer">this is sample answer.</string>
    <string name="home_info_skip_button">skip</string>
    <string name="config_notification_1">register notifications</string>
    <string name="config_notification_2">altar comment notifications</string>
    <string name="config_notification_3">obituary notifications</string>
    <string name="config_settings_1">email@email.com</string>
    <string name="config_settings_2">change password</string>
    <string name="config_settings_3">sign out</string>
    <string name="friend_list_add_group">add group</string>
    <string name="friend_list_remove_group">remove group</string>
    <string name="friend_list_remove_group_message">Are you sure you want to delete the group \"%s\"? </string>
    <string name="friend_list_assign_group">assign group</string>
    <string name="friend_list_add_group_name">group_name</string>
    <string name="friend_group_title">People who registered with me</string>
    <string name="promote_add_group">Try adding a group</string>
    <string name="friend_altar">Friend Altar</string>
    <string name="altar_comment_button">altar read / create comment</string>
    <string name="public_last_will_title">public last will title</string>
    <string name="cherish_comment_hint">cherish comment (max length : 100)</string>
    <string name="cherish_comment">cherish comment</string>
    <string name="cherish">cherish</string>
    <string name="delete_comment_dialog_message">Are you sure you want to delete the memorial?</string>
    <string name="create_comment_dialog_message">Would you like to write a memorial?</string>
    <string name="confirm_comment_dialog_message">Your tribute is the deceased\nIt is a great strength for my family.</string>
    <string name="altar_user_name">name</string>
    <string name="altar_user_birth">birth day</string>
    <string name="altar_user_female">female</string>
    <string name="altar_user_male">male</string>
    <string name="altar_user_school">school information</string>
    <string name="altar_user_company">company information</string>
    <string name="altar_user_society">society information</string>
    <string name="altar_user_last_will">last will</string>
    <string name="altar_user_contact_people">contact people</string>
    <string name="dialog_create_image_take_a_picture">take a picture</string>
    <string name="dialog_create_image_select_photo_in_album">select photo in album</string>
    <string name="dialog_title_information">Information.</string>
    <string name="dialog_create_birth_validate_info_message">After your death, your resident registration number Required.</string>
    <string name="resident_registration_number">resident registration number</string>
    <string name="confirm_repetition">confirm repetition</string>
    <string name="billing_star_title">Billing Star</string>
    <string name="billing_star_extra_star_format">+ star %s</string>
    <string name="billing_star_count_format">Star : %s</string>
    <string name="billing_star_price_format">$ %s</string>
    <string name="permission_explanation">In order to use the app, you need to authorize the following permissions.</string>
    <string name="altar_contact_count_format">contact person [ %1$s / %2$s ]</string>
    <string name="dialog_contact_confirm_info_message">Register selected contacts will you do it?</string>
    <string name="billing_star">billing star</string>
    <string name="dialog_promote_billing_star_info_message">There are not enough available stars.</string>
    <string name="camera_not_available">카메라를 사용할 수 없습니다.</string>
    <string name="check_the_input_window">Please check the input window.</string>
    <string name="birth_number_validation_false">유효하지 않는 번호 입니다.</string>
    <string name="birth_number_validation_true">가입 가능한 번호 입니다.</string>
    <string name="altar_user_school_hint">예) 삼현초등학교</string>
    <string name="altar_user_company_hint">예) 대한자동차</string>
    <string name="altar_user_social_hint">예) 대한동아리</string>
    <string name="altar_create_user_school">학교</string>
    <string name="altar_create_user_company">회사</string>
    <string name="altar_create_user_society">동아리</string>
    <string name="altar_create_user_last_will">마지막 한마디 남기기</string>
    <string name="altar_create_user_last_will_public">공개형</string>
    <string name="altar_create_user_last_will_private">비공개형</string>
    <string name="altar_last_will_limit">글자 제한 늘리기</string>
    <string name="altar_last_will_count_format">[ %1$s / %2$s ]</string>
    <string name="altar_last_will_select_message">타입을 선택해주세요.</string>
    <string name="altar_create_public_last_will">공개형 마지막 한마디 작성</string>
    <string name="altar_private_last_will_list">비공개형 마지막 한마디</string>
    <string name="altar_create_private_last_will">비공개형 마지막 한마디 작성</string>
    <string name="altar_public_last_will_hint">사랑하는 사람들에게 남기고 싶은 얘기를 \n자유롭게 적어주세요.</string>
    <string name="dialog_public_last_will_confirm_info_message">메세지를 등록하시겠습니까?</string>
    <string name="altar_private_last_will_empty_message">작성하신 메세지가 아직 없습니다.</string>
    <string name="altar_private_last_will_send_to_format">To : %s</string>
    <string name="altar_create_preview">분향소 미리보기</string>
    <string name="altar_preview_confirm_button">최종확인</string>
    <string name="obituary_submit">부고 알림 신청하시겠습니까?</string>
    <string name="obituary_advice_message">사망확인은 당사의 소정확인을 거쳐진행 됩니다. 거짓으로 사망신고시에 법적인 처벌을 받을 수 있습니다.</string>
    <string name="obituary_submit_title">부고 알림 신청</string>
    <string name="obituary_submit_name">본인이름</string>
    <string name="obituary_submit_name_2">사망인</string>
    <string name="obituary_submit_relations">관계</string>
    <string name="obituary_submit_contacts">연락처</string>
    <string name="obituary_submit_image">사망진단서 사진올리기</string>
    <string name="obituary_confirm_message">부고알림 요청이 완료되었습니다. 소정의 확인 절차를 거쳐 부고알림 소식이 전해집니다.</string>
    <string name="config_settings_send_email"><![CDATA[인증메일 보내기 >>]]></string>
    <string name="dialog_send_email_message">인증 메일을 발송 했습니다.</string>
    <string name="change_password_now">현재 비밀번호</string>
    <string name="change_password_new">새 비밀번호</string>
    <string name="change_password_new_confirm">새 비밀번호 확인</string>
    <string name="dialog_sign_out_message">로그아웃 하시면 지인들의  부고 알림을 받지 못합니다. 로그아웃 하시겠습니까?</string>
    <string name="dialog_change_password_title">비밀번호 변경</string>
    <string name="sign_in_email">이메일</string>
    <string name="sign_in_password">비밀번호</string>
    <string name="sign_in_forget_user_info">계정 정보를 잊으셨나요?</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="dialog_find_forgotten_email_text_view">이메일 찾기</string>
    <string name="dialog_find_forgotten_password_text_view">비밀번호 찾기</string>
    <string name="dialog_title_forget_user_info">로그인 정보 찾기</string>
    <string name="dialog_title_find_email">이메일 찾기</string>
    <string name="dialog_title_find_password">비밀번호 찾기</string>
    <string name="dialog_message_find_email">가입하신 전화번호로 이메일 주소를  보내드립니다.</string>
    <string name="dialog_message_find_password">등록한 이메일 주소로 임시비밀번호를  보내드립니다.</string>
    <string name="find_email_hint">예) 01012346572</string>
    <string name="find_password_hint">예) abc@abcde.com</string>
    <string name="sign_up_confirm_password">비밀번호 확인</string>
    <string name="sign_up_password">비밀번호 (영문+숫자 6글자 이상)</string>
    <string name="sign_up_email">이메일</string>
    <string name="sign_up_phone_number">휴대폰</string>
    <string name="submit_image_path_format">전송할 이미지 경로 : %s</string>
    <string name="submit_image_path_not_exist_format">Source File not exist : %s</string>
    <string name="dialog_message_character_count_limit">작성 글자수를 늘리시려면 별이 필요합니다.</string>
    <string name="menu_action_completed">완료</string>
    <string name="dialog_message_contribution">소유하고 있는 별 : %s</string>
    <string name="dialog_message_contribution_confirm">기부해주셔서 감사합니다. 당신의 조의금은 고인과 가족들에게 큰 힘이 됩니다.</string>
    <string name="not_enough_star_message">별이 부족합니다.</string>
    <string name="altar_user_contribution_create">조의금 계좌 등록</string>
    <string name="altar_user_bank_hint">은행명</string>
    <string name="altar_user_account_holder_hint">예금주</string>
    <string name="altar_user_account_number_hint">계좌번호</string>
    <string name="friend_list_ready_message">내 모바일 분향소를 완성하면\n지인 목록이 표시됩니다.</string>
    <string name="altar_update_button">수정하기</string>
    <string name="dialog_message_please_wait">잠시만 기다려주세요.</string>
    <string name="sign_in_fail_message">로그인 정보가 잘못되었습니다.</string>
    <string name="sign_up_fail_message">회원가입 정보가 잘못되었습니다.</string>
    <string name="obituary_fail_message">부고 알림 서버가 응답하지 않습니다. 잠시후 다시 요청해주세요.</string>
    <string name="altar_user_contribution">조의금 계좌 정보</string>
    <string-array name="add_friend_group_scope">
        <item>elementary school</item>
        <item>middle school</item>
        <item>high school</item>
        <item>university</item>
        <item>company</item>
        <item>social, group</item>
        <item>the other</item>
    </string-array>
    <string-array name="group_names_array">
        <item>@string/altar_user_school</item>
        <item>@string/altar_user_company</item>
        <item>@string/altar_user_society</item>
    </string-array>
    <string-array name="comment_sample_writers">
        <item>김미화</item>
        <item>양일석</item>
        <item>이일우</item>
        <item>김석근</item>
        <item>최미향</item>
    </string-array>
    <string-array name="comment_sample_date">
        <item>2017년 9월 3일</item>
        <item>2017년 9월 4일</item>
        <item>2017년 9월 7일</item>
        <item>2017년 9월 13일</item>
        <item>2017년 9월 17일</item>
    </string-array>
    <string-array name="comment_sample_message">
        <item>너무 그립고 보고 싶어요. 밥이라도 같이 제대로 먹어볼걸</item>
        <item>며칠전 다투고 화해도 못했는데 이렇게 보내게 되서 내 마음이 찢어진다 친구야</item>
        <item>너는 분명 천국에 갔을꺼야 친구야 사랑한다.</item>
        <item>선배님 이제 편히 쉬세요 항상 밥 챙겨주셔서 감사했습니다. 자주 들르겠습니다.</item>
        <item>미국에 있어서 장례식에도 못갔어 너무 미안해 ㅜ 너랑 학창시절 때 놀던 때가 그립구나</item>
    </string-array>
    <string-array name="obituary_sample_friend_name">
        <item>홍민수</item>
        <item>이아름</item>
        <item>남강수</item>
        <item>오세미</item>
        <item>강만식</item>
        <item>이은혜</item>
        <item>한석진</item>
        <item>한미숙</item>
        <item>남현곤</item>
        <item>홍숙희</item>
    </string-array>
    <string-array name="obituary_sample_friend_email">
        <item>user01@korea.com</item>
        <item>user02@korea.com</item>
        <item>user03@korea.com</item>
        <item>user04@korea.com</item>
        <item>user05@korea.com</item>
        <item>user06@korea.com</item>
        <item>user07@korea.com</item>
        <item>user08@korea.com</item>
        <item>user09@korea.com</item>
        <item>user10@korea.com</item>
    </string-array>
</resources>