<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--android:checkableBehavior="single"-->
    <group>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/nav_item_notifications"/>
        <item
            android:id="@+id/nav_stars"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/nav_item_star"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_item_settings"/>
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_faq"
            android:title="@string/nav_item_faq"/>
    </group>

</menu>
