<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:visibility="invisible"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_picture_frame">

            <ImageView
                android:id="@+id/altar_create_user_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_person"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/bg_picture_frame_head"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/altar_create_user_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="8dp"
                android:textSize="18sp"
                android:hint="@string/altar_user_name"
                android:background="@drawable/edit_text_under_line_focus_false"/>

            <TextView
                android:id="@+id/altar_create_user_birth_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="8dp"
                android:textSize="18sp"
                android:hint="@string/altar_user_birth"
                android:background="@drawable/edit_text_under_line_focus_false"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/altar_user_female"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altar_user_male"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/school_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/school_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altar_user_school"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/company_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/company_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altar_user_company"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/society_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/society_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altar_user_society"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/contact_friend_button_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/altar_user_contact_people"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_will_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_will_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altar_user_last_will"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>